# articles

./: .gitignore  Janus WebRTC Gateway -- 从零搭建完整指南.md
.github/workflows/: hugo-pages.yml
articles-streaming/: README.md
articles-streaming/01-network-fundamentals/: 01-socket-basics.md  02-io-multiplexing.md  03-reactor-pattern.md  04-network-optimization.md
articles-streaming/02-streaming-transport/: 05-rtp-rtcp.md  06-sdp-and-media-negotiation.md  07-jitter-buffer-and-fec.md
articles-streaming/03-classic-streaming-protocols/: 08-rtsp-protocol.md  09-rtmp-protocol.md  10-flv-and-rtmp-in-practice.md
articles-streaming/04-modern-streaming-protocols/: 11-hls-protocol.md  12-dash-protocol.md  13-srt-protocol.md  14-quic-and-streaming.md
articles-streaming/05-webrtc/: 15-webrtc-architecture.md  16-ice-stun-turn.md  17-dtls-srtp.md  18-webrtc-congestion-control.md  19-libwebrtc-practice.md
articles-streaming/06-practice-projects/: 20-live-streaming-system.md  21-video-conferencing.md  22-low-latency-streaming.md
articles-streaming/diagrams/: draw_part1_network.py  draw_part2_transport.py  draw_part3_classic.py  draw_part4_modern.py  draw_part5_webrtc.py  draw_part6_practice.py  generate_all.py  requirements.txt  utils.py
articles-streaming/publish/: 【音视频流媒体进阶：从网络到 WebRTC】第01篇-Socket 编程基础：TCP 与 UDP 的选择.md  【音视频流媒体进阶：从网络到 WebRTC】第02篇-I／O 多路复用：从 select 到 epoll.md  【音视频流媒体进阶：从网络到 WebRTC】第03篇-Reactor 模式与事件驱动网络框架.md  【音视频流媒体进阶：从网络到 WebRTC】第04篇-流媒体场景下的网络优化.md  【音视频流媒体进阶：从网络到 WebRTC】第05篇-RTP／RTCP 协议深度解析.md  【音视频流媒体进阶：从网络到 WebRTC】第06篇-SDP 与媒体协商机制.md  【音视频流媒体进阶：从网络到 WebRTC】第07篇-抖动缓冲与前向纠错.md  【音视频流媒体进阶：从网络到 WebRTC】第08篇-RTSP 协议详解与 live555 实战.md  【音视频流媒体进阶：从网络到 WebRTC】第09篇-RTMP 协议深度剖析.md  【音视频流媒体进阶：从网络到 WebRTC】第10篇-FLV 封装与 RTMP 直播实践.md  【音视频流媒体进阶：从网络到 WebRTC】第11篇-HLS 协议原理与实践.md  【音视频流媒体进阶：从网络到 WebRTC】第12篇-DASH 协议与自适应码率.md  【音视频流媒体进阶：从网络到 WebRTC】第13篇-SRT 协议与低延迟传输.md  【音视频流媒体进阶：从网络到 WebRTC】第14篇-QUIC／HTTP3 在流媒体中的应用.md  【音视频流媒体进阶：从网络到 WebRTC】第15篇-WebRTC 整体架构与信令设计.md  【音视频流媒体进阶：从网络到 WebRTC】第16篇-ICE／STUN／TURN：NAT 穿越全攻略.md  【音视频流媒体进阶：从网络到 WebRTC】第17篇-DTLS-SRTP：WebRTC 的安全传输.md  【音视频流媒体进阶：从网络到 WebRTC】第18篇-WebRTC 拥塞控制：GCC 与 BBR.md  【音视频流媒体进阶：从网络到 WebRTC】第19篇-libwebrtc 实战：构建 P2P 音视频通话.md  【音视频流媒体进阶：从网络到 WebRTC】第20篇-实战：构建一套完整的直播系统.md  【音视频流媒体进阶：从网络到 WebRTC】第21篇-实战：多人视频会议系统.md  【音视频流媒体进阶：从网络到 WebRTC】第22篇-实战：超低延迟直播方案.md
articles-streaming/scripts/: generate_csdn_publish.py
blog/: .gitignore  README.md  hugo.toml
blog/archetypes/: default.md  series.md
blog/content/: archives.md
blog/layouts/: list.html  page.archives.html  section.html
ffplay源码解析/: gen_images_01.py  gen_images_02.py  gen_images_03.py  gen_images_04.py  gen_images_05.py  gen_images_06.py  gen_images_07.py  gen_images_08.py  gen_images_09.py  gen_images_10.py  gen_images_11.py  【ffplay 源码解析系列】01-开篇-ffplay整体架构与启动流程.md  【ffplay 源码解析系列】02-核心数据结构详解.md  【ffplay 源码解析系列】03-解复用线程与数据读取.md  【ffplay 源码解析系列】04-解码核心机制.md  【ffplay 源码解析系列】05-音频输出与处理.md  【ffplay 源码解析系列】06-视频渲染与显示.md  【ffplay 源码解析系列】07-字幕处理与渲染.md  【ffplay 源码解析系列】08-音频可视化-波形与频谱显示.md  【ffplay 源码解析系列】09-音视频同步机制.md  【ffplay 源码解析系列】10-AVFilter滤镜系统.md  【ffplay 源码解析系列】11-事件处理与用户交互.md
opengl教程/: rename_publish.py
opengl教程/01-环境搭建与第一个窗口/src/: CMakeLists.txt  main.cpp
opengl教程/02-渲染管线与第一个三角形/src/: CMakeLists.txt
opengl教程/03-深入着色器与GLSL/src/: CMakeLists.txt  shader.h  vertex.glsl
opengl教程/04-纹理映射/src/: CMakeLists.txt  shader.h
opengl教程/05-坐标系统与3D变换/src/: CMakeLists.txt  main.cpp  shader.h
opengl教程/06-摄像机系统/src/: CMakeLists.txt  camera.h  main.cpp
opengl教程/07-基础光照/src/: CMakeLists.txt
opengl教程/07-基础光照/src/shaders/: object.fs  object.vs
opengl教程/08-模型加载/src/: CMakeLists.txt  camera.h  main.cpp  mesh.h  model.h  shader.h
opengl教程/09-进阶渲染技术/src/: CMakeLists.txt  camera.h  main.cpp  shader.h
opengl教程/09-进阶渲染技术/src/shaders/: depth.fs
opengl教程/common/: CMakeLists.txt  README.md
opengl教程/project/: CMakeLists.txt  README.md
opengl教程/project/ch02/: main.cpp
opengl教程/project/ch03/: main.cpp
opengl教程/project/ch03/shaders/: fragment.glsl
opengl教程/project/ch04/: main.cpp
opengl教程/project/ch04/shaders/: texture.fs
opengl教程/project/ch06/: shader.h
opengl教程/project/ch07/: main.cpp
opengl教程/project/ch08/: main.cpp
opengl教程/project/ch08/shaders/: model.fs  model.vs
opengl教程/project/ch09/: main.cpp
opengl教程/project/ch09/shaders/: scene.fs  scene.vs  screen.fs  screen.vs
opengl教程/project/ch10/: main.cpp
opengl教程/project/ch10/shaders/: scene.vs  screen.fs
opengl教程/project/common/: mesh.h  model.h  shader.h
音视频入门教程/: 01-走进音视频的世界.md  02-视频基础知识.md  03-音频基础知识.md  04-封装格式与多媒体容器.md  05-FFmpeg开发环境搭建.md  06-FFmpeg核心数据结构详解.md  07-FFmpeg核心工作流程.md  08-视频解码与格式转换.md  09-音频解码与重采样.md  10-SDL2视频渲染.md  11-SDL2音频播放.md  12-播放器架构设计.md  13-多线程解封装与解码.md  14-音视频同步.md  15-播放控制功能.md  16-完善播放器.md  17-字幕渲染.md  18-回顾与展望.md  introduce  附录A-FFmpeg常用CLI命令速查表.md  附录B-FFmpeg常见错误码与排查指南.md  附录C-项目CMakeLists与编译指南.md  附录D-推荐阅读与参考资料.md
音视频入门教程/ffmpeg-player-tutorial/: CMakeLists.txt  README.md
音视频入门教程/ffmpeg-player-tutorial/chapter-05-hello-ffmpeg/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-06-media-info/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-07-decode-first-frame/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-08-video-decode/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-09-audio-decode/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-10-sdl-video/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-11-sdl-audio/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-12-queue/: CMakeLists.txt  frame_queue.h  main.cpp  packet_queue.h
音视频入门教程/ffmpeg-player-tutorial/chapter-13-multithread/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-14-av-sync/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-15-controls/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-16-final-player/: CMakeLists.txt  main.cpp
音视频入门教程/ffmpeg-player-tutorial/chapter-17-subtitle/: CMakeLists.txt  main.cpp
(+72 files in other folders)
